kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: djangoPi-ingress
  labels:
    app: djangoPi
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: service.example.com  # Replace with the URL you want.
    http:
      paths:
      - path: /
        backend:
          serviceName: djangoPi-svc
          servicePort: 8000
